fix live-preview scrolling/overflow on iOS

--- a/source/stylesheets/elements/_live-previews.scss
+++ b/source/stylesheets/elements/_live-previews.scss
@@ -9,8 +9,15 @@
     height: auto;
   }
 
-  iframe {
+  > section {
     position: absolute;
+    -webkit-overflow-scrolling: touch;
+    overflow-y: scroll;
+  }
+
+  iframe {
+    width: 100%;
+    height: 100%;
   }
 
   &.run-animation {
@@ -25,7 +32,7 @@
       display: block;
     }
 
-    iframe {
+    > section {
       top: 12%;
       left: 8%;
       width: 84%;
@@ -42,7 +49,7 @@
       display: block;
     }
 
-    iframe {
+    > section {
       top: 10%;
       left: 9.5%;
       width: 81%;
@@ -59,7 +66,7 @@
       display: block;
     }
 
-    iframe {
+    > section {
       top: 5.75%;
       left: 9.5%;
       width: 81%;
